Generate Pelican site

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         <nav>
             <ul>
                 <li><a href="http://startover.github.io/">Home</a></li>
-                <li class="selected"><a href="http://startover.github.io/about.html">About</a></li>
+                <li class="selected"><a href="http://startover.github.io/about">About</a></li>
                 <li><a href="http://startover.github.io/categories">Categories</a></li>
                 <li><a href="http://startover.github.io/tags">Tags</a></li>
                 <li><a href="http://startover.github.io/archives">Archives</a></li>
