--- a/authors.html
+++ b/authors.html
@@ -21,7 +21,7 @@
         <nav>
             <ul>
                 <li><a href="http://startover.github.io/">Home</a></li>
-                <li><a href="http://startover.github.io/about.html">About</a></li>
+                <li><a href="http://startover.github.io/about">About</a></li>
                 <li><a href="http://startover.github.io/categories">Categories</a></li>
                 <li><a href="http://startover.github.io/tags">Tags</a></li>
                 <li><a href="http://startover.github.io/archives">Archives</a></li>
@@ -34,7 +34,7 @@
     <div id="wrapper">
         <div id="content">    <h1>Authors on startover's blog</h1>
 
-    <ul>        <li><a href="http://startover.github.io/author/startover.html">startover</a> (2)</li>
+    <ul>        <li><a href="http://startover.github.io/author/startover.html">startover</a> (3)</li>
     </ul>
 
             <div class="clear"></div>
