Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <li>功能测试</li>
 </ul>
 <p>Go 语言内置测试框架，其通过 <code>testing</code> 包以及 <code>go test</code> 命令来提供测试功能。</p>
-<p>但编写测试代码需<strong>遵循以下原则</strong>：</p>
+<p>编写测试代码需<strong>遵循以下原则</strong>：</p>
 <blockquote>
 <ol>
 <li>文件名必须是 <code>_test.go</code> 结尾的，这样在执行 <code>go test</code> 的时候才会执行到相应的代码。</li>
